--- a/Solution-files/Dockerfile
+++ b/Solution-files/Dockerfile
@@ -1,6 +1,6 @@
 # this is an answer file for the Assignment
 # move it up a directory for it to work
-FROM node:10.15-alpine
+FROM node:18-alpine3.20
 
 EXPOSE 3000
 
